test/simple/ill-typed/prepend.caprice
(* TEST
  include refutable;
*)


let rec prepend (l1 : list int) (l2 : list bool) : list int = 
  match l2 with
  | [] -> l1
  | hd :: tl -> prepend (hd :: l1) tl (* ERROR: isn't a list of ints. Is combo of int and bool *)
  end
